Fix alignment of img and content title

--- a/style.css
+++ b/style.css
@@ -52,8 +52,8 @@ body {
     background-color: #3882F6;
 }
 
-#hero-content-img {
-    /* Style this later */
+#hero-content-img img{
+    display: block;
 }
 
 /* Main content area */
@@ -68,14 +68,16 @@ body {
     font-size: 36px;
     font-weight: 900;
     padding: 0px;
+    margin-bottom: 0px;
 }
 
-#main-content-four-img-slots {
+#main-content-eight-img-slots {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-left: 0;
     margin-right: 0;
+    gap: 0px;
 }
 
 #main-content-inner-planet-title, #main-content-outer-planet-title {
@@ -92,12 +94,17 @@ body {
 }
 
 .main-content-img-slot {
+    width: 300px;
+    aspect-ratio: 1/1;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .main-content-img-slot img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 32px;
 }
 
